Fixed misaligned remove link option in the context menu

--- a/css/dropdowns.css
+++ b/css/dropdowns.css
@@ -601,10 +601,6 @@ filter: progid:DXImageTransform.Microsoft.Alpha(opacity=0);
     -moz-box-shadow: 0px 0px 0px 4px rgba(164,164,167,1);
     box-shadow: 0px 0px 0px 4px rgba(164,164,167,1);
 }
-.dropdown-item .small-icon.context.remove-link {
-    margin-right: 8px;
-}
-
 /* Tips and Hints */
 .dropdown.body.hint {
     padding: 0;
